Started fixing bugs, prints dice pictures out now. Have to do a way to only roll one dice at a time

--- a/a5.ipynb
+++ b/a5.ipynb
@@ -85,7 +85,7 @@
     "players as described below.\n",
     "\n",
     "The game ends when a player loses all their chips. The first player with zero\n",
-    "chips is the winner."
+    "chips is the winner.a"
    ]
   },
   {
